		  projects available in PV, so that it's possible to assign
		  keyboard shortcuts for those actions.
		- fix an NPE when using the "create group" and "create project"
		  menu items in the "combo" box.
		- add a new method that activates a specific option pane when
		  showing the project options dialog.
		- get rid of a few deprecation warnings.

	[alan ezust]
        - new actions: projectviewer_parent-group - opens parent group or project

        projectviewer_set-active - opens currently selected node if it is a group or project.

        projectviewer_new-file - opens a new file in the same directory as the
        currently selected pv node.

VERSION 2.1.3.3:
	[marcelo vanzin]
		- better handle the PV dockable being closed; old code was more
		  prone to not freeing memory that could be freed.
		- fix SF bug # 1493976: when re-importing, need to check if the
		  VPTDirectory.getFile() is under the old root, since getNodePath()
		  is changed when the directory doesn't exist anymore.

VERSION 2.1.3.2:
	[marcelo vanzin]
		- fix IconComposer again: fix in 2.1.3.1 disabled icon composing
		  altogether.

VERSION 2.1.3.1:
	[marcelo vanzin]
		- fix IconComposer: VFSFile provides null as the file argument
		  when asking for the status icon, and this was causing an NPE.

VERSION 2.1.3:
	[marcelo vanzin]
		- added filtered view contributed by Rudolf Widmann
		- some cosmetic/usability changes to external app config pane
		  (also done for filter config pane)
		- fix a nasty problem in the base64 decoding function: padding
		  was not being ignored when decoding encoded string.
		- fix more AWT thread-safety issues.
		- add a scroll bar to the config pane.
		- force reading config files in UTF-8; hopefully fixes problem
		  with reading paths in different code pages (SF bug 1464040).

VERSION 2.1.2:
	[marcelo vanzin]
		- fix calling GUIUtilities.getParentDialog() with a null parameter,
		  which caused jEdit to throw an NPE.